# GeoXGB

./: .dockerignore  .gitignore  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  Dockerfile  GEOMETRY.md  LICENSE  MANIFEST.in  README.md  gemini_optimization_ideas.md  hvrt-lm_spec.md  perf_diag.py  pyproject.toml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_wheels.yml
benchmarks/: PERFORMANCE_REPORT.md  accuracy_compare.py  adaptive_lr_benchmark.py  approach_bench.py  baselines.json  bins_benchmark.py  classification_benchmark.py  clf_hpo_bench.py  coupling_bench.py  criterion_benchmark.py  cv_fold_study.py  data_structure_bench.py  default_parameter_final_benchmark.py  e3_augment_bench.py  e3_augment_extended_bench.py  ek_aligned_bench.py  ek_blended_comprehensive.py  ek_blended_target_bench.py  ek_target_bench.py  geo_vs_xgb_extended_hpo.py  grad_budget_bench.py  grad_budget_bench2.py  grid_new_params.py  heart_disease_diagnostic.py  heterogeneity_detection_test.py  hvrt_feature_selection_validation.py  imputation_benchmark.py  interpretability_demo.py  kaggle_churn.py  kaggle_churn_bins_bench.py  kaggle_churn_diagnostics.py  kaggle_churn_e3_bench.py  kaggle_churn_e3_bench2.py  kaggle_churn_gini_bench.py  kaggle_churn_goss_hpo.py  kaggle_churn_hpo.py  kaggle_churn_hpo2.py  kaggle_churn_hpo3.py  kaggle_churn_hpo4.py  kaggle_churn_hvrt_augment.py  (+50 more)
benchmarks/comparison/: datasets.py  run_comparison.py
benchmarks/comparison/results/: comparison.csv
benchmarks/meta_v2/: dual_strategy.py  geo_autopsy.py  meta_reg.py  meta_reg_pyramid.py  residual_diag.py  residual_pattern.py  strategy.md  surgery_test.py  worst_residuals.py  xgb_comparison.py
benchmarks/meta_v2/results/: extended_hpo_geo_trials.csv  phase1_noise.csv  phase2_oat_primary.csv  phase3_oat_edge.csv  phase4_oat_secondary.csv  phase5_pairwise.csv  phase6_residual.csv  pyramid_oat.csv  pyramid_pairwise.csv
benchmarks/micro/: component_timing.py
benchmarks/results/: meta_oat.csv  meta_oat_clf.csv  xgb_comparison.csv  xgb_comparison_hvrt261_baseline.csv
benchmarks/suite/: __init__.py  __main__.py  config.py  datasets.py  metrics.py  models.py  runner.py
cpp/hvrt/include/hvrt/: expand.h  hvrt.h  reduce.h  target.h  tree.h  types.h
cpp/hvrt/src/: binner.cpp  expand.cpp  hvrt.cpp  reduce.cpp  target.cpp  tree.cpp
cpp/include/geoxgb/: geoxgb_base.h  geoxgb_classifier.h  geoxgb_exp_classifier.h  geoxgb_focal_classifier.h  geoxgb_gini_classifier.h  geoxgb_hinge_classifier.h  geoxgb_multiclass.h  geoxgb_regressor.h  noise.h  types.h
cpp/python/: bindings.cpp
cpp/src/: geoxgb_base.cpp  geoxgb_multiclass.cpp  noise.cpp
data/: create_causal_notebook.py
docs/: SPECIFICATION.md  geoxgb_architecture.tex  polynomial_findings.md  problem_statement.md  rtd_deps.txt
docs/source/: api.rst  conf.py  hpo_guide.md  index.rst  parameters.md  quickstart.md
examples/: basic_classification.py  basic_regression.py  categorical_features.py  interpretability_demo.py
insights/: __init__.py  _fit.py  _reports.py  _summary.py  _visualize.py  diabetes_investigation.py  heart_disease_investigation.py
notebooks/: best_train_performance.ipynb  diabetes_geoxgb_hpo.ipynb  geoxgb_causal_analysis.ipynb  geoxgb_timeseries_concept_drift.ipynb  geoxgb_vs_xgboost_demo.ipynb  heart_disease_pipeline.ipynb
opus_study/: FINDINGS.md  block_size_sweep.py  block_size_sweep_quick.py  defaults_improvement.py  defaults_stability.py  large_n_sweep.py  reduce_block_interaction.py  refit_block_interaction.py  results_block_sweep_quick.csv  results_d_formula_validation.csv  results_defaults_improvement.csv  results_defaults_stability.csv  results_large_n_sweep.csv  results_refit_block_interaction.csv  validate_d_formula.py
src/geoxgb/: __init__.py  _base.py  _cpp_backend.py  _hart.py  _noise.py  _resampling.py  _utils.py  analytics.py  artifact.py  classifier.py  conformal.py  contributions.py  explain.py  gardener.py  optimizer.py  regressor.py  report.py
src/geoxgb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/geoxgb/experimental/: __init__.py  _e3_augment.py  _ek_aligned.py  _ek_target.py  _synergy.py
tests/: test_categorical.py  test_classifier.py  test_contributions.py  test_convergence.py  test_interpretability.py  test_noise.py  test_regressor.py  test_report.py
