[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoxgb"
version = "0.1.6"
description = "Geometry-aware gradient boosting with HVRT-powered sample curation"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scikit-learn",
    "hvrt>=2.3.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
optimizer = ["optuna>=3.0"]

[tool.setuptools.packages.find]
where = ["src"]
