[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "geoxgb"
version = "0.3.1"
description = "Geometry-aware gradient boosting with HVRT-powered sample curation"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scikit-learn",
    "hvrt>=2.6.1",
]

[project.optional-dependencies]
dev       = ["pytest", "pytest-cov"]
optimizer = ["optuna>=3.0"]
# hvrt Python package no longer required — bundled as C++ source

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages   = ["src/geoxgb"]
# The compiled extension installs into geoxgb/ via CMakeLists install()
